# chip-8

./: .gitignore  Cargo.toml
src/: cpu.rs  decoder.rs  main.rs  opcode.rs  renderer.rs  screen.rs
