[package]
name = "my-chip-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
rand = "0.8.5"
sdl2 = "0.37.0"
simplelog = "0.12.1"
strum = "0.26.3"
strum_macros = "0.26.4"
rfd = "0.14.1"
